Fixed color contrast on navbar and homepage

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -158,12 +158,18 @@ footer {
 .openrecords_nav {
     font-size: 20px;
     /*font-size: 1.4em*/
-    color: #949494;
 }
 .openrecords_nav:hover {
     font-size: 20px;
     /*font-size: 1.4em*/
-    color: #949494;
+}
+
+.navbar-default .navbar-nav > li > a.openrecords-nav-anchor {
+    color: #707070;
+}
+
+.navbar-default .navbar-nav > li > a.openrecords-nav-anchor:hover {
+    color: #333333;
 }
 
 .active {
